# MF-Blocks-Manager

./: .gitignore  AUTHORS  README.es.md  README.md  install.sh
backend/collective.mfblocks/: README.md  create_registry.py  pyproject.toml
backend/collective.mfblocks/src/collective/mfblocks/: __init__.py  configure.zcml  setuphandlers.py
backend/collective.mfblocks/src/collective/mfblocks/content/: mfblock.py
backend/collective.mfblocks/src/collective/mfblocks/profiles/default/: types.xml
backend/collective.mfblocks/src/collective/mfblocks/profiles/default/types/: MFBlock.xml
backend/collective.mfblocks/src/collective/mfblocks/services/: blocks_registry.py  configure.zcml  mfblocks_manage.py
backend/collective.mfblocks/src/collective/mfblocks/subscribers/: configure.zcml  mfblock.py
examples/: README.es.md  README.md
examples/blocks/spacer/: package.json  webpack.config.js
examples/blocks/spacer/src/: Edit.jsx  Schema.js  View.jsx  index.js
examples/shared/: webpack.base.js
examples/shared/stubs/: volto-block-data-form.js  volto-components.js
frontend/volto-mfblocks/: package.json
frontend/volto-mfblocks/src/: index.ts
frontend/volto-mfblocks/src/components/MFBlocksControlPanel/: MFBlocksControlPanel.tsx
frontend/volto-mfblocks/src/mf/: MFBlocksLoader.tsx  loader.ts  ssrPreRegister.ts
